# lichen-cli

./: .gitignore  README.md  config.toml  global.config.toml  notes.md  pyproject.toml  requirements.txt  setup.cfg
.scaffold/: registry.toml
cli/: pyproject.toml
cli/lichen_cli/: config.toml  main.py  utils.py
cli/lichen_cli/.scaffold/: registry.toml
cli/lichen_cli/commands/: project.py  test.py
cli/lichen_cli/scaffolds/default/shared/: logging.template
cli/lichen_cli/workspace/: __init__.py  base.py  client.py  project.py  workspace.py
client_build/: pyproject.toml
client_build/scaffold/: README.md  main.py  pyproject.toml
client_build/scaffold/.scaffold/: registry.toml
client_build/scaffold/commands/: new.py  sync.py
core/lichen_core/: context.py
lichen/: cli.py  config.py  main.py  scaffold.py  utils.py
lichen/cli/: __init__.py  main.py  project.py  service.py  test.py
lichen/scaffold/: __init__.py  scaffold.py  scaffold.toml
lichen/utils/: io.py
shim/: lichen  scaffold
src/cli/: dev.py  main.py  project.py  test.py
src/client_build/: build.py  main.py
src/core/: config.py  context.py  workspace.py
src/lichen_cli/: config.py  main.py  project.py
tests/: conftest.py  test_cli.py  test_client_build.py  test_config.py  test_context.py  test_registry.py  test_scaffold.py  test_scaffolder.py  test_utils.py  test_workspace.py  utils.py
tests/.test_data/: test_config.toml  test_registry.toml  test_registry_save.toml
tests/cli/: test_dev.py  test_help.py  test_project.py  test_service.py  test_test.py
tests/scaffold/: test_node.py  (+1 more)
(+66 files in other folders)
