[project]
name = "Lichen"
version = "0.0.1"
description = "Lichen Stack Project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
[[project.authors]]
name = ""

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
lichen = "lichen_cli.main:app"