[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lichen-cli"
version = "0.0.1"
dependencies = ["lichen-core>=0.0.1"]

[project.scripts]
lichen = "lichen_cli.main:app"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["lichen_cli*"]

