[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lichen-core"
version = "0.0.1"
description = "Core scaffolding/registry library"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["lichen_core*"]